# matplotlib-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
src/matplotlib_mcp/: server.py
src/models/: chart_request_model.py  chart_series_model.py  line_chart_request_model.py
src/services/: area_chart_service.py  boxplot_chart_service.py  chart_service.py  chart_utils_service.py  heatmap_chart_service.py  histogram_chart_service.py  line_chart_service.py  line_markers_chart_service.py  pie_chart_service.py  scatter_chart_service.py  stacked_bar_chart_service.py  timeline_chart_service.py
