[project]
name = "matplotlib-mcp"
version = "0.1.0"
description = "Servidor MCP para renderizar gráficos de linha com FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]",
  "matplotlib",
  "pydantic",
  "complexipy>=5.2.0",
]

[project.scripts]
matplotlib-mcp = "matplotlib_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = []
